deployment/static/ingresses/prd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: algreg-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - algoritmeoverheid.nl
      secretName: algoritmeoverheid-nl-certificate
    - hosts:
        - www.algoritmeoverheid.nl
      secretName: algoritmeoverheid-nl-certificate      
  rules:
    - host: algoritmeoverheid.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: algreg-frontend
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: algreg-backend
                port:
                  number: 8000
    - host: www.algoritmeoverheid.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: algreg-frontend
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: algreg-backend
                port:
                  number: 8000
